# scaffold

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.example.yaml  pyproject.toml
scaffold/: __main__.py  config.py  layout.py  server.py  windows.py  zones.py
scaffold/cli/: list_layouts.py  menubar.py  organize.py  restore_layout.py  save_layout.py  snap.py
scaffold/static/: organizer.html
